# Gifter

./: .gitignore  README.md  config.py  ebay.yaml  ebay.yaml.example  facebook_api.py  recipient.py  requirements.txt  setup.cfg
src/: manage_gifter.py  requirements.txt  setup.cfg  wsgi.py
src/core/: config.py  errors.py  local_settings.py.example
src/crawlers/: suggested.py  user_friends.py  user_tweets.py
src/experimental/: Categories_from_ebay.ipynb  entities.ipynb  recipient.py
src/experimental/lda/: LDA2.ipynb  Wiki.ipynb  lda.py  model.py
src/experimental/llda/: llda_twitter.ipynb  llda_usage.py  model.py  report.py  train.py
src/experimental/word2vec/: model.py  playground.ipynb  pretrained_models.py  train.py
src/gifter/: __init__.py  csrf.py  models.py  testing.py  utils.py
src/gifter/api/: ebay_api.py  facebook_api.py  gifter_api.py  whoami_api.py
src/gifter/db/: init_db.py  init_db.sh
src/gifter/static/: bower.json
src/gifter/static/public/: app.js  app.route.js  index.html
src/gifter/static/www/: main.css  main.js
src/gifter/tests/: test_api.py  test_twitter.py
src/ml/: data.py  entities.py  models.py  stats.py
src/ml/data/: category_mapping.json  whoami.csv
src/ml/data/labeled_twitter/: categories.json
src/ml/data/skmodels/: bayes.pkl_01.npy  bayes.pkl_04.npy  bayes.pkl_05.npy  bayes.pkl_06.npy  bayes.pkl_07.npy  svc.pkl_01.npy  (+2 more)
src/ml/evaluation/: report.py  separate.py
src/ml/gifts/: process.py
src/ml/people/: process.py
src/ml/skmodels/: models.py
src/whoami/static/: Gruntfile.js  bower.json  package.json
(+112 files in other folders)
