[metadata]
name = gifter
version = 0.0.1

[files]
packages =
    gifter

[entry_points]
console_scripts =
    crawl_tweets = gifter.crawlers.user_tweets:main
    crawl_suggested_tweets = gifter.crawlers.suggested:crawl_all
    preprocess_suggested = gifter.crawlers.suggested:preprocess_all
    generate_ebay_category = gifter.utils:generate_ebay_category
