[metadata]
name = gifter
version = 0.0.2

[files]
packages =
    gifter
    crawlers
    fun
    ml

[entry_points]
console_scripts =
    crawl_tweets = crawlers.user_tweets:main
    crawl_suggested_tweets = crawlers.suggested:crawl_all
    preprocess_suggested = crawlers.suggested:preprocess_all
    remove_preprocessed = crawlers.suggested:remove_preprocessed
    generate_ebay_category = gifter.utils:generate_ebay_category
    report = ml.evaluation.report:create_report
    stats = ml.stats:stats
